<resources>
    <string name="app_name">IQChannels SDK</string>
    <string name="ok">OK</string>
    <string name="unknown_exception">Неизвестная ошибка</string>

    <string name="chat_attach">Прикрепить</string>
    <string name="chat_camera_or_file">Отправить фото или документ</string>
    <string name="chat_send">Отпр.</string>
    <string name="send">Отправить</string>
    <string name="chat_login_hint">Имя</string>
    <string name="chat_send_hint">Сообщение…</string>
    <string name="chat_failed_to_load_messages">Ошибка загрузки сообщений</string>
    <string name="chat_upload_error">Ошибка</string>
    <string name="chat_upload_cancel">Отменить</string>
    <string name="chat_upload_retry">Повторить</string>
    <string name="chat_ratings_rate">Пожалуйста, оцените качество консультации:</string>
    <string name="chat_ratings_rate_msg">Удалось решить вопрос? Оцените работу оператора</string>
    <string name="chat_ratings_rated">Оценка оператора %1$d из 5</string>
    <string name="chat_ratings_rated_custom">Оценка оператора %1$d из %2$d</string>
    <string name="chat_ratings_ignored">Оценка оператору не поставлена</string>
    <string name="chat_send_file_confirmation">Подтвердите отправку файла:</string>
    <string name="chat_send_multiple_file_confirmation">За раз можно отправить до 10 файлов</string>
    <string name="chat_send_file_confirmation_description">Вы действительно желаете отправить %1$s ?</string>
    <string name="chat_send_file_confirmation_description_multiple">Вы действительно желаете отправить %1$s файла(-ов)?</string>
    <string name="chat_send_file_confirmation_description_multiple_cut">За один раз можно отправить не более 10 файлов. Вы действительно желаете отправить первые выбранные 10 файлов?</string>
    <string name="cancel">Отмена</string>
    <string name="downloading">Загрузка...</string>
    <string name="open_file">Открыть файл</string>
    <string name="download_file">Сохранить в \"Загрузки\"</string>
    <string name="file_size_too_large">Превышен максимально допустимый размер файла</string>
    <string name="image_size_too_large">Слишком большая ширина или высота изображения</string>
    <string name="file_extension_not_allowed">Неподдерживаемый тип файла</string>
    <string name="file_extension_forbidden">Запрещенный тип файла</string>
    <string name="check_connection">Проверьте соединение с Интернетом</string>
    <string name="error_occured">Произошла ошибка</string>
    <string name="timeout_message">Превышено время ожидания, повторите попытку позже</string>
    <string name="file_saved_success_msg">Файл \"%1$s\" успешно сохранен в папку \"Загрузки\"</string>
    <string name="file_saved_fail_msg">Не удалось сохранить файл \"%1$s\" в папку \"Загрузки\"</string>
    <string name="file_size_kb_placeholder">%1$s кб</string>
    <string name="file_size_mb_placeholder">%1$s Мб</string>
    <string name="msg_date_time">%1$s, %2$s</string>
    <string name="today">Сегодня</string>
    <string name="image_saved">Изображение сохранено в Галерею</string>
    <string name="message_copied">Сообщение скопировано</string>
    <string name="clear">Понятно</string>
    <string name="chat_unavailable">Чат временно недоступен</string>
    <string name="chat_unavailable_description">Мы уже все исправляем. Обновите страницу или попробуйте позже</string>
    <string name="go_back">Вернуться</string>
    <string name="file_not_uploaded">Файл не загрузился</string>
    <string name="online">На связи</string>
    <string name="new_messages">Новые сообщения</string>
    <string name="unsecure_file">Небезопасный файл</string>
    <string name="file_sent_to_check">Файл отправлен на проверку</string>
    <string name="file_on_checking">Файл на проверке</string>
    <string name="error_on_checking">Ошибка проверки файла</string>
    <string name="rating_poll_edit_text_placeholder">Ваш ответ</string>
    <string name="rating_poll_show_offer_text">Желаете пройти опрос?</string>
    <string name="rating_poll_submit">Отправить</string>
</resources>
