<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="4dp"
    android:orientation="vertical">

    <!-- Day -->
    <TextView
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingBottom="6dp"
        android:textColor="#ff979fa7"
        android:textSize="12sp"
        android:textStyle="bold"/>

    <!-- Other message -->
    <LinearLayout
        android:id="@+id/other"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Avatar -->
        <FrameLayout
            android:id="@+id/otherAvatar"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginRight="8dp">

            <ImageView
                android:id="@+id/otherAvatarImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                tools:ignore="ContentDescription"/>

            <TextView
                android:id="@+id/otherAvatarText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#ff78909c"
                android:gravity="center"
                android:textColor="#ffffffff"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/avatar_overlay"
                tools:ignore="ContentDescription"/>
        </FrameLayout>

        <!-- Name, payload, date-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Name -->
            <TextView
                android:id="@+id/otherName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:textColor="#ff000000"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <!-- Image -->
            <FrameLayout
                android:id="@+id/otherImageFrame"
                android:layout_width="200dp"
                android:layout_height="150dp"
                android:background="#fff0f0f0">

                <ProgressBar
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_gravity="center"
                    android:indeterminate="true"/>

                <ImageView
                    android:id="@+id/otherImageSrc"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    tools:ignore="ContentDescription"/>
            </FrameLayout>

            <!-- Text -->
            <TextView
                android:id="@+id/otherText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="40dp"
                android:autoLink="all"
                android:background="#fff0f0f0"
                android:paddingBottom="10dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="8dp"
                android:textColor="#ff4c4c4c"
                android:textSize="16sp"/>


            <!-- Rating -->
            <include layout="@layout/chat_rating"
                android:id="@+id/rating"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginRight="40dp" />

            <!-- Date -->
            <TextView
                android:id="@+id/otherDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:textColor="#ff979fa7"
                android:textSize="12sp"/>

        </LinearLayout>
    </LinearLayout>

    <!-- My message -->
    <LinearLayout
        android:id="@+id/my"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="88dp"
        android:orientation="vertical">

        <!-- Payload -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- Upload -->
            <LinearLayout
                android:id="@+id/myUpload"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="#fff0f0f0"
                android:orientation="vertical"
                android:padding="8dp">

                <ProgressBar
                    android:id="@+id/myUploadProgress"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/myUploadError"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chat_upload_error"
                    android:textColor="#ff0000"/>

                <LinearLayout
                    style="?attr/buttonBarStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/myUploadCancel"
                        style="?android:buttonBarButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/chat_upload_cancel"/>

                    <Button
                        android:id="@+id/myUploadRetry"
                        style="?android:buttonBarButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/chat_upload_retry"/>
                </LinearLayout>
            </LinearLayout>

            <!-- Image -->
            <FrameLayout
                android:id="@+id/myImageFrame"
                android:layout_width="200dp"
                android:layout_height="150dp"
                android:layout_alignParentRight="true"
                android:background="#fff0f0f0">

                <ProgressBar
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_gravity="center"
                    android:indeterminate="true"/>

                <ImageView
                    android:id="@+id/myImageSrc"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    tools:ignore="ContentDescription"/>
            </FrameLayout>

            <!-- Text -->
            <TextView
                android:id="@+id/myText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:autoLink="all"
                android:background="#ffe8f9d4"
                android:gravity="end|center_vertical"
                android:paddingBottom="10dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="8dp"
                android:textColor="#ff4c4c4c"
                android:textSize="16sp"/>
        </RelativeLayout>

        <!-- Flags -->
        <LinearLayout
            android:id="@+id/myFlags"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right|center_vertical"
            android:orientation="horizontal">

            <!-- Date -->
            <TextView
                android:id="@+id/myDate"
                style="@style/chat_message_my_date"
                android:layout_marginRight="2sp"/>

            <!-- Read -->
            <TextView
                android:id="@+id/myRead"
                style="@style/chat_message_my_flag"
                android:layout_marginRight="-5sp"
                android:width="8sp"
                android:text="✓"
                tools:ignore="HardcodedText,SmallSp"/>

            <!-- Received -->
            <TextView
                android:id="@+id/myReceived"
                style="@style/chat_message_my_flag"
                android:width="8sp"
                android:text="✓"
                tools:ignore="HardcodedText,SmallSp"/>

            <!-- Sending -->
            <ProgressBar
                android:id="@+id/mySending"
                android:layout_width="12sp"
                android:layout_height="12sp"
                android:layout_marginRight="2sp"
                android:layout_marginTop="3sp"
                android:indeterminate="true"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
